examples/good/01-01-types.lagger
int main(){
    int a = 1;
    int b;
    string c = "Hello World!";
    string d;
    boolean e = true;
    boolean f;
    return 0;
}

