examples/bad/11-01-invalid-return-type.lagger
int main(){
    println("Hello World");
    return "Hello World";
}